@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-22-14
+DATE: 08/22/2023
+STAFF: lec
+wts2-1258/fl2-488/littriage/secondary triage/GXD
+#       modified:   bin/secondary.py
+
 TAG: littriageload-6-0-22-13
 DATE: 06/14/2023
 STAFF: lec
